// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseOSnapTransaction > should parse oSnap contract interaction transaction 1`] = `
{
  "_form": {
    "abi": [
      {
        "anonymous": false,
        "inputs": [
          {
            "indexed": true,
            "internalType": "address",
            "name": "user",
            "type": "address",
          },
          {
            "indexed": false,
            "internalType": "string",
            "name": "content",
            "type": "string",
          },
          {
            "indexed": true,
            "internalType": "string",
            "name": "tag",
            "type": "string",
          },
        ],
        "name": "NewPost",
        "type": "event",
      },
      {
        "inputs": [
          {
            "internalType": "string",
            "name": "content",
            "type": "string",
          },
          {
            "internalType": "string",
            "name": "tag",
            "type": "string",
          },
        ],
        "name": "post",
        "outputs": [],
        "stateMutability": "nonpayable",
        "type": "function",
      },
    ],
    "args": [
      "test",
      "test",
    ],
    "method": "post",
    "recipient": "0x000000000000cd17345801aa8147b8D3950260FF",
  },
  "_type": "contractCall",
  "data": "0x0ae1b13d000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000004746573740000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000047465737400000000000000000000000000000000000000000000000000000000",
  "salt": "",
  "to": "0x000000000000cd17345801aa8147b8D3950260FF",
  "value": "0",
}
`;

exports[`parseOSnapTransaction > should parse oSnap raw transaction 1`] = `
{
  "_form": {
    "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  },
  "_type": "raw",
  "data": "0x",
  "salt": "",
  "to": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "value": "1",
}
`;

exports[`parseOSnapTransaction > should parse oSnap transfer NFT transaction 1`] = `
{
  "_form": {
    "amount": "1",
    "nft": {
      "address": "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
      "collection": "Weee Did It Palz",
      "id": "810",
      "name": "Weeedidit Palls #101",
    },
    "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  },
  "_type": "sendNft",
  "data": "0x42842e0e0000000000000000000000008edfcc5f141ffc2b6892530d1fb21bbcdc74b455000000000000000000000000556b14cbda79a36dc33fcd461a04a5bcb5dc2a70000000000000000000000000000000000000000000000000000000000000032a",
  "salt": "",
  "to": "0x5A96CF3ace257Dfcc1fd3C037e548585124dc0C5",
  "value": "0",
}
`;

exports[`parseOSnapTransaction > should parse oSnap transfer funds transaction 1`] = `
{
  "_form": {
    "amount": "1000000000000000",
    "recipient": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
    "token": {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "decimals": 18,
      "name": "Ether",
      "symbol": "ETH",
    },
  },
  "_type": "sendToken",
  "data": "0x",
  "salt": "",
  "to": "0x556B14CbdA79A36dC33FcD461a04A5BCb5dC2A70",
  "value": "1000000000000000",
}
`;
